# rag

./: .env.example  .gitignore  Lancement.md  Makefile  README.md  compose.override.yml.windows  compose.yml  make.ps1  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: kb-chercheur.agent.md  kb-configurateur.agent.md  kb-updater.agent.md
.github/prompts/: kb-api-call.prompt.md  phase1-extracteurs.prompt.md  phase2-ingestion.prompt.md  phase3-retrieval.prompt.md  phase4-assistant.prompt.md  phase5-reverse-doc.prompt.md  portage_windows_probleme_1.prompt.md  portage_windows_probleme_2.prompt.md  portage_windows_probleme_3.prompt.md  portage_windows_probleme_4.prompt.md  portage_windows_probleme_5.prompt.md  portage_windows_probleme_6.prompt.md  portage_windows_probleme_7.prompt.md  portage_windows_probleme_8.prompt.md  portage_windows_probleme_9.prompt.md
.github/skills/kb-ask/: SKILL.md
.github/skills/kb-ask/references/: question-catalog.md
.github/skills/kb-copilot-bridge/: SKILL.md
.github/skills/kb-diagrams/: SKILL.md
.github/skills/kb-ingest/: SKILL.md
.github/skills/kb-ingest/references/: workflows-pipelines.md
.github/skills/kb-organize/: SKILL.md
.github/skills/kb-reveng/: SKILL.md
.github/skills/kb-setup/: SKILL.md
copilot-bridge/: README.md  package-lock.json  package.json  tsconfig.json
copilot-bridge/src/: extension.ts
docs/: guide_utilisation.md  portage_windows_probleme_2.md
scripts/: migrate_episode_keys.py  setup.py  verify-neo4j.ps1
src/kb_smart_metering/: __init__.py  cli.py  config.py
src/kb_smart_metering/api/: __init__.py  app.py  routes.py
src/kb_smart_metering/assistant/: __init__.py  chain.py  llm.py  render.py
src/kb_smart_metering/export/: __init__.py  office_writer.py
src/kb_smart_metering/extractors/: __init__.py  confluence.py  diagrams.py  files.py  git.py  jira.py  meetings.py  office.py
src/kb_smart_metering/ingestion/: __init__.py  embedder.py  entity_types.py  extraction_schema.py  graph_writer.py  graphiti.py  pipeline.py
src/kb_smart_metering/models/: __init__.py  entities.py  responses.py
src/kb_smart_metering/normalize/: __init__.py  models.py
src/kb_smart_metering/retrieval/: __init__.py  context.py  llm_client.py  reranker.py  retriever.py  search.py
src/kb_smart_metering/revengine/: __init__.py  ast_extract.py  diagram_export.py  docgen.py  graph_build.py
tests/: conftest.py  test_assistant.py  test_config.py  test_diagram_export.py  test_diagrams.py  test_extractors.py  test_graph_writer.py  test_ingestion.py  test_models.py  test_office_writer.py  test_retrieval.py  test_revengine.py
tests/fixtures/: reunion_2024-01-15.txt  reunion_teams.vtt
